--- a/force-app/main/default/classes/CarTriggerHandler.cls
+++ b/force-app/main/default/classes/CarTriggerHandler.cls
@@ -1,13 +1,13 @@
 public without sharing class CarTriggerHandler extends TriggerHandler{
     
-    public override void beforeDelete(){
-        Map<id, Car__c> newCarsMap = (Map<id, Car__c>) Trigger.oldMap;
-        ChangeContactWalletValue.increaseWallet(newCarsMap);
+    public override void afterDelete(){
+        Map<id, Car__c> oldCarsMap = (Map<id, Car__c>) Trigger.oldMap;
+        ChangeContactWalletValue.changeWalletValue(oldCarsMap);
     }
 
     public override void afterInsert(){
-        Map<id, Car__c> newCarsMap = (Map<id, Car__c>) Trigger.newMap;
-        ChangeContactWalletValue.reductionWallet(newCarsMap);
+        Map<id, Car__c> newCarsMap = (Map<id, Car__c>) Trigger.newMap;z
+        ChangeContactWalletValue.changeWalletValue(newCarsMap);
     }
 
 }
