--- a/force-app/main/default/classes/Wrapper.cls
+++ b/force-app/main/default/classes/Wrapper.cls
@@ -1,25 +1,14 @@
 public with sharing class Wrapper {
 
     @AuraEnabled(cacheable=true)
-    public static List<ContactWrapperClass> fetchWrapperData(String AccountId){
+    public static List<ContactWrapperClass> fetchWrapperData(String recordId){
 
-        Account AccountIds = [SELECT id FROM Account WHERE id=:AccountId];
         List<ContactWrapperClass> wrapperList = new List<ContactWrapperClass>();
-        List<Contact> ContactNameList = [SELECT id, name FROM Contact WHERE AccountId =:AccountIds.id];
-
-        Set<id> contactsIds = new Set<id>();
-        for(Contact contact: ContactNameList){
-            contactsIds.add(contact.id);
-        }
-
-        List<Car__c> carList = [SELECT Name__c, Fuel__c,Contacts__c FROM Car__c WHERE Contacts__c IN :contactsIds];
-        
+        List<Car__c> carList = [SELECT Name__c, Fuel__c, Contacts__c, Contacts__r.Name FROM Car__c WHERE Contacts__r.AccountId =: recordId];
+        System.debug(carList);
         for(Car__c car : carList){
-            for(Contact contact : ContactNameList){
-                if(car.Contacts__c == contact.id){
-                    wrapperList.add(new ContactWrapperClass(car, contact.name));
-                }
-            }
+        System.debug(car+' '+car.Contacts__r.Name );
+            wrapperList.add(new ContactWrapperClass(car, car.Contacts__r.Name));
         }
         return wrapperList;
     }
@@ -27,7 +16,7 @@ public with sharing class Wrapper {
     public class ContactWrapperClass {
         @AuraEnabled
         public Car__c car;
-        @AuraEnabled
+        @AuraEnabled 
         public String Contact_Name;
         @AuraEnabled
         public String Car_name;
